--- a/module5/ss9_ket_noi_backend/bai_tap/angular-todo-app/angular-todo-app/src/app/todo/todo.component.html
+++ b/module5/ss9_ket_noi_backend/bai_tap/angular-todo-app/angular-todo-app/src/app/todo/todo.component.html
@@ -1,14 +1,14 @@
 <div class="col-md-8 offset-md-2">
-  <form class="col-md-8 offset-md-2" [formGroup]="inputForm" (ngSubmit)="change()">
-    <input type="text" class="form-control" formControlName="input">
-    <input type="hidden" formControlName="complete">
-    <button type="submit">Create</button>
+  <form class="col-md-8 offset-md-2" [formGroup]="inputForm" >
+    <input type="text" class="form-control" formControlName="content">
+    <input type="button" class="btn btn-primary" value="Create" (click)="change()" >
   </form>
   <ul>
     <li (click)="toggleTodo(i)"
         [class.complete]="todo.complete"
         *ngFor="let todo of todos; index as i">
       {{todo.content}}
+      <input type="button" class="btn " value="Delete" (click)="deleteTodo(i)" >
     </li>
   </ul>
 </div>
