--- a/module5/QLSV/qlsv-angular/src/app/sinh-vien/list/list.component.html
+++ b/module5/QLSV/qlsv-angular/src/app/sinh-vien/list/list.component.html
@@ -1,3 +1,11 @@
+<div class="container">
+  <form *ngIf="formSearch" class="mb-5 d-flex align-items-center justify-content-center" [formGroup]="formSearch" (ngSubmit)="search()">
+    <input type="text" formControlName="name" class="form-control" placeholder="Nhập tên">
+    <button [disabled]="!formSearch.valid" class="btn btn-primary ml-5">Search</button>
+    <button class="btn btn-primary ml-5" (click)="reset()">Reset</button>
+  </form>
+</div>
+
 <table *ngIf="Svs" class="table table-striped table-striped table-dark table-bordered">
   <tr class="thead-dark">
     <th>STT</th>
